--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MobArenaGod
 main: com.ACStache.MobArenaGod.MobArenaGod
-version: 0.3.1
+version: 0.3.2
 author: ACStache
 description: A simple God Mode plugin that plays nice with Mob Arena
 softdepend: [MobArena]
@@ -8,12 +8,12 @@ commands:
     mag:
         description: Turn god mode on or off, or check the status
         usage: |
-               /mag toggle
+               /mag
                /mag status
 permissions:
     MobArenaGod.toggle:
-        description: allows use of "/mag toggle" command
+        description: allows use of "/mag" command to toggle god mode
         default: op
     MobArenaGod.status:
-        description: allows use of "/mag status" command
+        description: allows use of "/mag status" command to check current god mode status
         default: op
