--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MobArenaGod
 main: com.ACStache.MobArenaGod.MobArenaGod
-version: 0.3.2
+version: 0.3.3
 author: ACStache
 description: A simple God Mode plugin that plays nice with Mob Arena
 softdepend: [MobArena]
@@ -10,6 +10,8 @@ commands:
         usage: |
                /mag
                /mag status
+        permission: MobArenaGod.toggle
+        permission: MobArenaGod.status
 permissions:
     MobArenaGod.toggle:
         description: allows use of "/mag" command to toggle god mode
