--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MobArenaGod
 main: com.ACStache.MobArenaGod.MobArenaGod
-version: 0.4
+version: 0.4-Dev
 author: ACStache
 description: A simple God Mode plugin that plays nice with Mob Arena
 softdepend: [MobArena]
